--- a/static/style/style.css
+++ b/static/style/style.css
@@ -24,9 +24,7 @@ html {
 
 /*Style Background of Webpages*/
 body {
-  background: linear-gradient(145deg, var(--darkgray), #101515, var(--darkgray), #101515);
-  background-size: 300% 300%;
-  animation: gradientscroll 8s linear infinite;
+  background-image: linear-gradient(145deg, var(--darkgray), #101515;
   padding-bottom: 60px;
   position: relative;
   height: 100vh;
