--- a/static/style/style.css
+++ b/static/style/style.css
@@ -158,7 +158,7 @@ form {
   opacity: 1;
 }
 
-input[type=file], input[type=text], input[type=password], select {
+input[type=file], input[type=text], input[type=password], input[type=email], select {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
