A few changes to the front-end, including updating the preview history button to be more discoverable

--- a/server/src/pages/templates/navbar_admin.html
+++ b/server/src/pages/templates/navbar_admin.html
@@ -4,5 +4,6 @@
     	<li><a href="/profile">Profile</a></li>
     	<li><a href="/upload">File Upload</a></li>
 		<li><a href="/editor">Editor</a></li>
+        <li><a href="/">Home</a></li>
 	</ul>
 </nav>
