--- a/static/style/style.css
+++ b/static/style/style.css
@@ -111,8 +111,8 @@ header{
   line-height: 1.5;
   margin: 20px auto;
 }
-button {
-  width: 140px;
+button, input[type="submit"] {
+  min-width: 140px;
   margin: 20px 10px;
   color: var(--darkgray);
   font-family: Muli;
@@ -173,7 +173,7 @@ input[type=submit], input[type=button] {
   background-color: var(--palegreen);
   color: var(--darkgray);
   font-size: 18px;
-  padding: 14px 20px;
+  padding: 10px;
   margin: 8px 0;
   border: none;
   border-radius: 20px;
@@ -437,6 +437,12 @@ input[type=submit]:hover, input[type=button]:hover {
 .mimic-link {
   color: var(--offwhite);
   text-decoration: underline;
+  text-align: center;
+  display: block;
+  width: 100%;
+  text-decoration: underline;
+  font-size: 32px;
+  margin-bottom: 25px;
 }
 
 #new-story-pane {
@@ -468,18 +474,47 @@ input[type=submit]:hover, input[type=button]:hover {
 }
 
 .fa-heart {
-  position: fixed;
-  left: 90px;
-  top: 46px;
   color: var(--palegreen);
-  height: 50px;
-  width:50px;
   font-size: 30px;
   cursor: pointer;
+  vertical-align: top;
+  margin-top: 10px;
+}
+
+.story-nav {
+  position: fixed;
+  left: 90px;
+  top: 38px;
+  height: 50px;
+}
+
+.story-nav input[type="submit"] {
+  margin: 0;
+  margin-right: 15px;
 }
 
 .story-content {
   margin-top: 150px;
   margin-left: 25px;
   margin-right: 25px;
+}
+
+.hidden-form {
+  display: inline-block;
+}
+
+input[type="submit"].storylink {
+  color: white;
+  background-color: transparent;
+  text-align: center;
+  width: 100%;
+  text-decoration: underline;
+  font-size: 32px;
+}
+
+.collapsible-content .hidden-form input[type="submit"], .content .hidden-form input[type="submit"] {
+  margin: 0;
+  color: white;
+  text-decoration: underline;
+  text-align: left;
 }
