Added error messages for incorrect login and account already exists

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -25,6 +25,7 @@ html {
 
 /*Style Background of Webpages*/
 body {
+  font-family: Muli;
   background-image: linear-gradient(145deg, var(--darkgray), #101515);
   padding-bottom: 60px;
   position: relative;
@@ -534,4 +535,11 @@ input[type="submit"].storylink {
 
 #editor_wizard {
   z-index: 1;
+}
+
+.error-message {
+  background-color: #dc3545;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
 }
