--- a/server/src/pages/templates/navbar_admin.html
+++ b/server/src/pages/templates/navbar_admin.html
@@ -2,6 +2,7 @@
     <ul>
     	<li><a href="/logout">Logout</a></li>
     	<li><a href="/profile">Profile</a></li>
+    	<li><a href="/users">Users</a></li>
     	<li><a href="/upload">File Upload</a></li>
 		<li><a href="/editor">Editor</a></li>
         <li><a href="/">Home</a></li>
