WIP story map progress. progress with map layout. added dragability. added comments.

--- a/static/scripts/editor/map_style.css
+++ b/static/scripts/editor/map_style.css
@@ -4,13 +4,24 @@ div {
 
 line {
     stroke: rgb(71, 170, 216);
-    stroke-width: .3em;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-dasharray: 10, 9;
 }
 
 .page_button {
     color: red;
-    /* width: 12em;
-    height: 2em; */
     overflow: hidden;
     padding: 0;
+    border-width: 3;
+}
+
+#map_frame {
+    height: 300;
+    width: 300;
+    overflow: hidden;
+}
+
+#map_canvas {
+    cursor: move;
 }
