--- a/static/scripts/editor/map_style.css
+++ b/static/scripts/editor/map_style.css
@@ -1,6 +1,6 @@
-#map_frame div {
+/* div {
     position: relative;
-}
+} */
 
 line {
     /* stroke: rgb(71, 170, 216); */
@@ -9,7 +9,7 @@ line {
     stroke-dasharray: 8, 4;
 }
 
-#map_frame .page_button {
+#map_canvas .map_page_button {
     color: red;
     overflow: hidden;
     padding: 0;
@@ -18,11 +18,12 @@ line {
 
 #map_frame {
     overflow: hidden;
-    display: relative;
-    z-index: 10;
+    position: absolute;
+    top: 100px;
+    left: 100px;
 }
 
 #map_canvas {
     cursor: move;
-    display: relative;
+    position: absolute;
 }
