Fixed edited page contents not being styled

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -145,7 +145,7 @@ button:hover.unclickable {
 }
 
 /*Style Story Text */
-p.storytext {
+.storytext {
 	text-align: center;
 	font-family: Muli, Helvetica, sans-serif;
 	font-size: 2em;
