$.post(/editor/save_story,

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -615,6 +615,7 @@ button#view_storymap {
   margin-top: 4px;
   background-color: var(--paleyellow);
   border-color: var(--paleyellow);
+  display: none;
 }
 
 button.page_op {
