--- a/static/style/style.css
+++ b/static/style/style.css
@@ -250,8 +250,10 @@ input[type=submit]:hover, input[type=button]:hover {
 
 .open_or_new button {
 	width: 300px;
-	margin-bottom: 30px;
-	font-size: 50px;
+	/* margin-bottom: 30px; */
+	font-size: 30px;
+  position: relative;
+  top: 200px
 }
 
 .saved_engines button {
