Fixed clearing issue with child link text

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -587,6 +587,8 @@ input[type="submit"].storylink {
   /* overflow: auto;
   text-align: center;
   justify-content: center; */
+  justify-content: center;
+  text-align: center;
 }
 
 #editor_wizard > input, #editor_wizard > label {
