--- a/static/style/style.css
+++ b/static/style/style.css
@@ -259,43 +259,33 @@ input[type=submit]:hover, input[type=button]:hover {
 }
 
 .parent2 {
-	/* display: grid; */
-	/* grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(5, 1fr); */
-	/* grid-column-gap: 0px;
-	grid-row-gap: 0px; */
 	height: 100%;
 }
 
 #storage {
-  max-height: 7%;
+/*  max-height: 9%;*/
   width: 100%; 
-	border: 1px solid var(--palegreen);
+/*	border: 1px solid var(--palegreen);*/
   display: flex;
   flex-flow: row wrap;
-	/* grid-area: 1 / 1 / 2 / 4;  */
 }
 
 .div6 {
   min-height: 8%;
   width: 100%; 
   color: var(--offwhite);
-  /* font-family: Muli; */
   font-size: 20px;
   border: 1px solid var(--palegreen);
-	/* grid-area: 2 / 1 / 3 / 4;  */
 }
 
 .div7 { 
   color: var(--offwhite);
-  border: 1px solid var(--palegreen);
-/*	grid-area: 3 / 1 / 9 / 1;*/
+/*  border: 1px solid var(--palegreen);*/
   overflow: scroll;
   overflow-x: hidden;
   width: 19%;
   min-width: 15%;
   height: inherit;
-  /* max-height: 100%; */
 }
 
 .div7 h1 {
@@ -304,15 +294,12 @@ input[type=submit]:hover, input[type=button]:hover {
   color: var(--offwhite);
 }
 
-.div8 { 
-	/*grid-area: 3 / 2 / 9 / 4;*/ 
+.div8 {  
   width: max-content;
   display: flex;
   flex-direction: column;
   margin-left: auto;
   margin-right: 3px;
-  /* position: absolute;
-  right: 30px; */
 }
 
 .collapsible {
@@ -519,6 +506,7 @@ input[type="submit"].popout {
   display: flex;
   flex-direction: row; 
   width: 100%;
+  border: 1px solid var(--palegreen);
 }
 
 #save_story {
@@ -764,4 +752,8 @@ label.error {
 
 #metadata {
   width: 100%;
+}
+
+.spacer {
+  height: 80px;
 }
