Added feature to import JSON into the editor

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -778,3 +778,9 @@ label.error {
 .spacer {
   height: 8%;
 }
+
+/*#import-upload {
+  position: absolute;
+  background-color: var(--offwhite);
+  padding: 50px;
+}*/
